fix some NPE, optimized code